============================
Release notes for carray 0.2
============================

:Author: Francesc Alted i Abad
:Contact: faltet@pytables.org


Changes from 0.2 to 0.3
=======================

- Added a new `ctable` class that implements a compressed, column-wise
  table.

- Added new `__len__()` and `__sizeof__()` special methods for both
  `carray` and `ctable` objects.

- Added new `nbytes` and `cbytes` properties for `carray` and `ctable`
  objects.  The former accounts for the size of the original
  (non-compressed) object, and the later for the actual compressed
  object.

- New algorithm for computing an optimal chunk size for carrays based on
  the new `expectedlen` argument.

- Added `chunklen` property for `carray` that allows querying the chunk
  length (in rows) for the internal I/O buffer.

- Added a new `append(rows)` method to `ctable` class.

- Added a new `where()` iterator for `carray` that mimics the
  `nonzero()` method in NumPy.

- Added a new `getif(boolarr)` iterator for `carray` that returns values
  only on those places where `boolarr` is true.  Also, calling
  ``carray[boolarr]`` is the same than `carray.getif(boolarr)`.

- Added a new `eval()` method for `ctable` that is able to evaluate
  expressions with columns.  It needs numexpr to be installed.

- Idiom ``ctable[boolexpr]`` is recognized now and returns the rows
  fullfilling the boolean expression.  Needs numexpr.

- Idiom ``ctable[boolarr]`` is recognized now and returns the rows where
  the boolean array is true.

- Added fancy indexing (as a list of integers) support to `carray` and
  `ctable`.

- Added `copy(clevel, shuffle)` method to both `carray` and `ctable`
  objects.

- Removed the `toarray()` method in `carray` as this was equivalent to
  ``carray[:]`` idiom.

- Renamed `setBloscMaxThreads()` to `blosc_set_num_threads()` and
  `whichLibVersion()` to `blosc_version()` to follow carray name
  conventions more closely.
