@@ -53,7 +53,7 @@ from carray.carrayExtension import (
     carray, blosc_version, blosc_set_num_threads)
 from carray.ctable import ctable
 from carray.functions import (
-    detect_number_of_cores, set_num_threads, fromiter, cparms)
+    detect_number_of_cores, set_num_threads, fromiter, cparms, eval)
 from carray.version import __version__
 
 
