@@ -13,6 +13,17 @@ import sys, os
 import itertools as it
 import numpy as np
 import carray as ca
+import math
+
+if ca.numexpr_here:
+    from numexpr.expressions import functions as numexpr_functions
+
+
+# The size of the columns chunks to be used in `ctable.eval()`, in
+# bytes.  For optimal performance, set this so that it will not exceed
+# the size of your L2/L3 (whichever is larger) cache.
+#EVAL_BLOCK_SIZE = 16            # use this for testing purposes
+EVAL_BLOCK_SIZE = 3*1024*1024    # 3 MB represents a good average?
 
 
 def detect_number_of_cores():
@@ -160,6 +171,124 @@ def fromiter(iterable, dtype, count=-1, **kwargs):
     return obj
 
 
+def _getvars(expression, depth):
+    """Get the variables in `expression`.
+
+    `depth` specifies the depth of the frame in order to reach local
+    or global variables.
+    """
+
+    cexpr = compile(expression, '<string>', 'eval')
+    exprvars = [ var for var in cexpr.co_names
+                 if var not in ['None', 'False', 'True']
+                 and var not in numexpr_functions ]
+
+    # Get the local and global variable mappings of the user frame
+    user_locals, user_globals = {}, {}
+    user_frame = sys._getframe(depth)
+    user_locals = user_frame.f_locals
+    user_globals = user_frame.f_globals
+
+    # Look for the required variables
+    reqvars = {}
+    for var in exprvars:
+        # Get the value.
+        if var in user_locals:
+            val = user_locals[var]
+        elif var in user_globals:
+            val = user_globals[var]
+        else:
+            raise NameError("variable name ``%s`` not found" % var)
+        # Check the value.
+        if hasattr(val, 'dtype') and val.dtype.str[1:] == 'u8':
+            raise NotImplementedError(
+                "variable ``%s`` refers to "
+                "a 64-bit unsigned integer object, that is "
+                "not yet supported in expressions, sorry; " % var )
+        reqvars[var] = val
+    return reqvars
+
+
+def eval(expression, **kwargs):
+    """
+    eval(expression, **kwargs)
+
+    Evaluate a Numexpr `expression` and return the result.
+
+    Parameters
+    ----------
+    expression : string
+        A string forming an expression, like '2*a+3*b'. The values for 'a' and
+        'b' are variable names to be taken from the calling function's frame.
+        These variables may be scalars, carrays or NumPy arrays.
+    kwargs : list of parameters or dictionary
+        Any parameter supported by the carray constructor.
+
+    Returns
+    -------
+    out : carray object
+        The outcome of the expression.  You can taylor the
+        properties of this carray by passing additional arguments
+        supported by carray constructor in `kwargs`.
+
+    """
+
+    if not ca.numexpr_here:
+        raise ImportError(
+            "You need numexpr %s or higher to use this method" % \
+            ca.min_numexpr_version)
+
+    # Get variables and column names participating in expression
+    depth = kwargs.pop('depth', 2)
+    vars = _getvars(expression, depth=depth)
+
+    # Gather info about sizes and lengths
+    typesize, vlen = 0, 1
+    for name in vars.iterkeys():
+        var = vars[name]
+        if hasattr(var, "dtype"):  # numpy/carray arrays
+            typesize += var.dtype.itemsize
+        elif hasattr(var, "__len__"): # sequence
+            arr = np.array(var[0])
+            typesize += arr.dtype.itemsize
+        if hasattr(var, "__len__"):
+            if vlen > 1 and vlen != len(var):
+                raise ValueError, "sequences must have the same length"
+            vlen = len(var)
+
+    if typesize == 0:
+        # All scalars
+        return ca.numexpr.evaluate(expression, local_dict=vars)
+
+    # Compute the optimal block size (in elements)
+    bsize = EVAL_BLOCK_SIZE // typesize
+    # Evaluation seems more efficient if block size is a power of 2
+    bsize = 2 ** (int(math.log(bsize, 2)))
+
+    # Perform the evaluation in blocks
+    vars_ = {}
+    expectedlen = bsize    # a default
+    for i in xrange(0, vlen, bsize):
+        # Get buffers for columns
+        for name in vars.iterkeys():
+            var = vars[name]
+            if hasattr(var, "__len__") and len(var) > bsize:
+                vars_[name] = var[i:i+bsize]
+                expectedlen = len(var)
+            else:
+                vars_[name] = var
+        # Perform the evaluation for this block
+        res_block = ca.numexpr.evaluate(expression, local_dict=vars_)
+        if i == 0:
+            # Get a decent default for expectedlen
+            nrows = kwargs.pop('expectedlen', expectedlen)
+            result = ca.carray(res_block, expectedlen=nrows, **kwargs)
+        else:
+            result.append(res_block)
+
+    return result
+
+
 class cparms(object):
     """
     cparms(clevel=5, shuffle=True)
@@ -206,3 +335,10 @@ class cparms(object):
         return '%s(%s)' % (self.__class__.__name__, ', '.join(args))
 
 
+
+## Local Variables:
+## mode: python
+## py-indent-offset: 4
+## tab-width: 4
+## fill-column: 78
+## End:
